fix(i18n): Add 36 missing auto.fm.hr.directory.new translation keys
TRANSLATION FIX 2025-12-11T17:31:

Added missing translation keys for new employee form:
- toast.success/error
- header.title/subtitle
- sections.profile/role/compensation (title + description)
- actions.cancel/saving/submit
- form.* (14 field labels + placeholders)

Files updated:
- i18n/en.json (36 keys)
- i18n/ar.json (36 keys)
- i18n/generated/en.dictionary.json (36 keys)
- i18n/generated/ar.dictionary.json (36 keys)

Translation audit result:
✅ Catalog Parity: OK
✅ Code Coverage: All used keys present
⚠️ Dynamic Keys: Present (template literals)

docs(pending): Update to v15.16

--- a/docs/translations/translation-audit.json
+++ b/docs/translations/translation-audit.json
@@ -3,339 +3,14 @@
     "files": 836,
     "usedKeys": 2953,
     "hasDynamic": true,
-    "enCount": 31283,
-    "arCount": 31283,
+    "enCount": 31319,
+    "arCount": 31319,
     "parityGap": 0
   },
   "missing": {
     "inAr": [],
     "inEn": [],
-    "used": [
-      {
-        "key": "auto.fm.hr.directory.new.toast.success",
-        "bare": "auto.fm.hr.directory.new.toast.success",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/NewEmployeePageClient.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.toast.error",
-        "bare": "auto.fm.hr.directory.new.toast.error",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/NewEmployeePageClient.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.breadcrumbs",
-        "bare": "auto.fm.hr.directory.new.breadcrumbs",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/NewEmployeePageClient.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.header.title",
-        "bare": "auto.fm.hr.directory.new.header.title",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/NewEmployeePageClient.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.header.subtitle",
-        "bare": "auto.fm.hr.directory.new.header.subtitle",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/NewEmployeePageClient.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.sections.profile.title",
-        "bare": "auto.fm.hr.directory.new.sections.profile.title",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/NewEmployeePageClient.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.sections.profile.description",
-        "bare": "auto.fm.hr.directory.new.sections.profile.description",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/NewEmployeePageClient.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.sections.role.title",
-        "bare": "auto.fm.hr.directory.new.sections.role.title",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/NewEmployeePageClient.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.sections.role.description",
-        "bare": "auto.fm.hr.directory.new.sections.role.description",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/NewEmployeePageClient.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.sections.compensation.title",
-        "bare": "auto.fm.hr.directory.new.sections.compensation.title",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/NewEmployeePageClient.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.sections.compensation.description",
-        "bare": "auto.fm.hr.directory.new.sections.compensation.description",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/NewEmployeePageClient.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.actions.cancel",
-        "bare": "auto.fm.hr.directory.new.actions.cancel",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/NewEmployeePageClient.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.actions.saving",
-        "bare": "auto.fm.hr.directory.new.actions.saving",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/NewEmployeePageClient.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.actions.submit",
-        "bare": "auto.fm.hr.directory.new.actions.submit",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/NewEmployeePageClient.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.compensationType.label",
-        "bare": "auto.fm.hr.directory.new.form.compensationType.label",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/CompensationNotesStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.compensationType.placeholder",
-        "bare": "auto.fm.hr.directory.new.form.compensationType.placeholder",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/CompensationNotesStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.salary.label",
-        "bare": "auto.fm.hr.directory.new.form.salary.label",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/CompensationNotesStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.notes.label",
-        "bare": "auto.fm.hr.directory.new.form.notes.label",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/CompensationNotesStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.notes.placeholder",
-        "bare": "auto.fm.hr.directory.new.form.notes.placeholder",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/CompensationNotesStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.firstName.label",
-        "bare": "auto.fm.hr.directory.new.form.firstName.label",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/ProfileBasicsStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.firstName.placeholder",
-        "bare": "auto.fm.hr.directory.new.form.firstName.placeholder",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/ProfileBasicsStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.lastName.label",
-        "bare": "auto.fm.hr.directory.new.form.lastName.label",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/ProfileBasicsStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.lastName.placeholder",
-        "bare": "auto.fm.hr.directory.new.form.lastName.placeholder",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/ProfileBasicsStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.workEmail.label",
-        "bare": "auto.fm.hr.directory.new.form.workEmail.label",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/ProfileBasicsStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.phone.label",
-        "bare": "auto.fm.hr.directory.new.form.phone.label",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/ProfileBasicsStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.reportsTo.label",
-        "bare": "auto.fm.hr.directory.new.form.reportsTo.label",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/ProfileBasicsStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.reportsTo.placeholder",
-        "bare": "auto.fm.hr.directory.new.form.reportsTo.placeholder",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/ProfileBasicsStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.jobTitle.label",
-        "bare": "auto.fm.hr.directory.new.form.jobTitle.label",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/RoleDetailsStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.jobTitle.placeholder",
-        "bare": "auto.fm.hr.directory.new.form.jobTitle.placeholder",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/RoleDetailsStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.department.label",
-        "bare": "auto.fm.hr.directory.new.form.department.label",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/RoleDetailsStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.department.placeholder",
-        "bare": "auto.fm.hr.directory.new.form.department.placeholder",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/RoleDetailsStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.employmentType.label",
-        "bare": "auto.fm.hr.directory.new.form.employmentType.label",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/RoleDetailsStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.employmentType.placeholder",
-        "bare": "auto.fm.hr.directory.new.form.employmentType.placeholder",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/RoleDetailsStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.workModel.label",
-        "bare": "auto.fm.hr.directory.new.form.workModel.label",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/RoleDetailsStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.workModel.placeholder",
-        "bare": "auto.fm.hr.directory.new.form.workModel.placeholder",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/RoleDetailsStep.tsx"
-        ]
-      },
-      {
-        "key": "auto.fm.hr.directory.new.form.startDate.label",
-        "bare": "auto.fm.hr.directory.new.form.startDate.label",
-        "inEN": false,
-        "inAR": false,
-        "files": [
-          "Fixzit/app/fm/hr/directory/new/steps/RoleDetailsStep.tsx"
-        ]
-      }
-    ]
+    "used": []
   },
   "fileMap": {
     "billing.history.tagline": [
@@ -9447,5 +9122,5 @@
       "Fixzit/components/ui/pagination.tsx"
     ]
   },
-  "timestamp": "2025-12-11T14:22:51.514Z"
+  "timestamp": "2025-12-11T14:31:06.263Z"
 }
