fix(auth): Disable OTP by default - align client/server logic
- app/login/page.tsx: Changed REQUIRE_SMS_OTP to === 'true' (opt-in)
- docs/BACKLOG_AUDIT.json: v2.5 format with 10 pending issues
- docs/BACKLOG_AUDIT.md: Human-readable backlog report
- docs/PENDING_MASTER.md: v65.26 changelog entry
- i18n: Updated translations

OTP is now disabled unless NEXT_PUBLIC_REQUIRE_SMS_OTP=true and
NEXTAUTH_REQUIRE_SMS_OTP=true are explicitly set.

--- a/i18n/sources/landing.translations.json
+++ b/i18n/sources/landing.translations.json
@@ -27,6 +27,9 @@
     "landing.features.workorders.title": "Work Orders",
     "landing.hero.actions.bookDemo": "Book a live demo",
     "landing.hero.actions.getStarted": "Get started with Fixzit",
+    "landing.hero.actions.pricing": "Pricing & Free Trial",
+    "landing.hero.actions.signIn": "Sign in",
+    "landing.hero.actions.vendorApply": "Apply as Vendor",
     "landing.hero.cta1": "Access Fixzit FM",
     "landing.hero.cta2": "Fixzit Souq",
     "landing.hero.cta3": "Aqar Real Estate",
@@ -90,6 +93,9 @@
     "landing.features.workorders.title": "أوامر العمل",
     "landing.hero.actions.bookDemo": "احجز عرضًا مباشرًا",
     "landing.hero.actions.getStarted": "ابدأ مع Fixzit",
+    "landing.hero.actions.pricing": "الأسعار والتجربة المجانية",
+    "landing.hero.actions.signIn": "تسجيل الدخول",
+    "landing.hero.actions.vendorApply": "قدّم كمورّد",
     "landing.hero.cta1": "الوصول إلى فيكزيت FM",
     "landing.hero.cta2": "فيكزيت سوق",
     "landing.hero.cta3": "عقار فيكزيت",
